--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ footer { background: #07101a; border-top: 1px solid var(--border-dim); padding: 
     <li><a href="#phases">Phases</a></li>
     <li><a href="#maths">Constants</a></li>
     <li><a href="#build">Build</a></li>
-    <li><a href="https://t.me/Project52F" class="nav-cta">Telegram →</a></li>
+    <li><a href="https://t.me/+c-FlYTpZrhU4ZTI0" class="nav-cta">Telegram →</a></li>
   </ul>
   <div class="nav-hamburger" id="hamburger" aria-label="Menu">
     <span></span><span></span><span></span>
@@ -518,7 +518,7 @@ footer { background: #07101a; border-top: 1px solid var(--border-dim); padding: 
   <a href="#phases">Phases</a>
   <a href="#maths">Constants</a>
   <a href="#build">Build Progress</a>
-  <a href="https://t.me/Project52F">Join Telegram →</a>
+  <a href="https://t.me/+c-FlYTpZrhU4ZTI0">Join Telegram →</a>
 </div>
 
 <!-- HERO -->
@@ -568,10 +568,10 @@ footer { background: #07101a; border-top: 1px solid var(--border-dim); padding: 
             <div class="const-use">Hardening → Scarcity</div>
           </div>
           <div class="const-cell">
-            <div class="const-sym">80.6B</div>
+            <div class="const-sym">52!</div>
             <div class="const-label">Supply</div>
-            <div class="const-val">80,600,000,000</div>
-            <div class="const-use">52 × 1.55B constant</div>
+            <div class="const-val">80,658,175,170</div>
+            <div class="const-use">First 11 digits of 52 factorial</div>
           </div>
         </div>
       </div>
@@ -813,10 +813,10 @@ footer { background: #07101a; border-top: 1px solid var(--border-dim); padding: 
         <p>Immutable transition to scarcity era.</p>
       </div>
       <div class="math-card">
-        <div class="math-sym">80.6B</div>
+        <div class="math-sym">52!</div>
         <div class="math-name">Supply</div>
-        <div class="math-val">52 × 1.55B</div>
-        <p>Mathematically derived total supply.</p>
+        <div class="math-val">80,658,175,170</div>
+        <p>First 11 digits of 52 factorial. The brand constant.</p>
       </div>
       <div class="math-card">
         <div class="math-sym">36K</div>
@@ -905,8 +905,8 @@ footer { background: #07101a; border-top: 1px solid var(--border-dim); padding: 
       <div class="footer-col">
         <h4>Community</h4>
         <ul>
-          <li><a href="https://t.me/Project52F">Telegram</a></li>
-          <li><a href="https://twitter.com/Project52F">Twitter</a></li>
+          <li><a href="https://t.me/+c-FlYTpZrhU4ZTI0">Telegram</a></li>
+          <li><a href="https://twitter.com/project52f">Twitter</a></li>
           <li><a href="https://github.com/Project52F">GitHub</a></li>
         </ul>
       </div>
